--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+GemRB V0.3.1 (2008-):
+  New features:
+    - mouse scroll support
+    - starting tob inventory
+    - character import in iwd and how
+    - spritecover for area animations
+    - proper XP bonus for thieving and learning spells
+    - biography editing
+
+  Improved features:
+    - 
+    - gcc 4.3 compatibility
+    - PST bestiary
+    - bg2 and tob game modes have been merged
+    - bg2 and iwd2 character generation was simplified and improved
+    - stricter dualclassing prerequisites
+    - the cmake build system is available for other platforms too
+    - pathfinding
+    - less memory leaks
+    - bugfixes
+
 GemRB V0.3.0 (2008-02-17):
   New features:
     - TLK override handling (custom biographies and map notes)
