--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,12 @@
-GemRB V0.3.1 (2008-):
+GemRB V0.3.1 (2008-09-25):
   New features:
     - mouse scroll support
     - starting tob inventory
     - character import in iwd and how
     - spritecover for area animations
     - proper XP bonus for thieving and learning spells
-    - biography editing
 
   Improved features:
-    - 
     - gcc 4.3 compatibility
     - PST bestiary
     - bg2 and tob game modes have been merged
@@ -16,6 +14,7 @@ GemRB V0.3.1 (2008-):
     - stricter dualclassing prerequisites
     - the cmake build system is available for other platforms too
     - pathfinding
+    - starting time is now at day 0
     - less memory leaks
     - bugfixes
 
