AUTHORS: added fuzzie
svn-id: r5682

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 
 GemRB authors listed in Alphabetical Order
 
+Alyssa Milburn <fuzzie@users.sourceforge.net>
 Avenger <avenger_teambg@users.sourceforge.net>
 Balrog994 <Balrog994@yahoo.com>
 Brian Tanedo <behteh@users.sourceforge.net>
