AUTHORS: added zefklop
svn-id: r5903

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-
 GemRB authors listed in Alphabetical Order
 
 Alyssa Milburn <fuzzie@users.sourceforge.net>
@@ -13,3 +12,4 @@ Jaka Kranjc <lynxlupodian@users.sourceforge.net>
 Lotana <lotana@users.sourceforge.net>
 Thuy Nguyen <ndthuy@users.sourceforge.net>
 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+Zefklop <zefklop@users.sourceforge.net>
