--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Edheldil <edheldil@users.sourceforge.net>
 GuidoJ <guidoj@users.sourceforge.net>
 Jaka Kranjc <lynxlupodian@users.sourceforge.net>
 Lotana <lotana@users.sourceforge.net>
+Marshall Mattingly III <mattinm@users.sourceforge.net>
 Thuy Nguyen <ndthuy@users.sourceforge.net>
 Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 Zefklop <zefklop@users.sourceforge.net>
