--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+********************************************************************
+NOTE: since v0.2.3 (2005-02-13) the release notes are stored in NEWS
+********************************************************************
+
 2005-12-06  Edheldil  <edheldil@users.sourceforge.net>
 	* release 0.2.6
 
