NEWS update feel free to do this simultaneously with other changes ;)
svn-id: r6183

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,12 @@
-GemRB svn (6100):
+GemRB svn (6182):
   New features:
     - 
+    - bg2 chargen now levels to the correct level
+    - running and portal animations in pst
 
   Improved features:
     - 
+    - levelup, dual classing
     - various guiscripts
     - bugfixes
 
