--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,20 @@
-GemRB svn (6282):
+GemRB svn (6382):
   New features:
     - 
+    - combat: dual-wielding, APR, proficiency and style boni, dexterity
+      bonus, initiatitive and speed factor, individual combat rounds
+    - ToB and PST are roughly playable beyond their first levels
     - projectile sounds
-    - The Nameless One properly dies / resurrects
     - bg2 chargen now levels to the correct level
-    - running and portal animations in pst
+    - running and portal animations in PST
 
   Improved features:
-    - dialog, actions and triggers (especially the ones in the start of ToB)
-    - combat
-    - fixed projectile orientations
+    - matters of time and matter
+    - dialog, actions and triggers
+    - combat mechanics, animation, ranged combat
+    - area music restarts when there's no music playing
+    - The Nameless One properly dies / resurrects
+    - projectile orientation, animation
     - disarm trap checks skills
     - levelup, dual classing, multiclass handling
     - various guiscripts
