--- a/gemrb.6
+++ b/gemrb.6
@@ -227,6 +227,26 @@ Set this parameter to
 on Unix-like systems.
 
 .TP
+.BR DelayPlugin =FILENAME
+Named plugin will be loaded after other (nondelayed) plugins were loaded.
+.IR FILENAME 
+is a name without path, but with extension, for example
+.IR libNullSound.so 
+or
+.IR libNullSound.dll .
+You can use this parameter more than once.
+
+.TP
+.BR SkipPlugin =FILENAME
+Named plugin will not be loaded.
+.IR FILENAME 
+is a name without path, but with extension, for example
+.IR libNullSound.so 
+or
+.IR libNullSound.dll .
+You can use this parameter more than once.
+
+.TP
 .BR SaveAsOriginal =(0|1)
 Set this parameter to
 .IR 1 ,
