--- a/TODO
+++ b/TODO
@@ -77,6 +77,7 @@ Sound:
    them in another thread (openal weirdness?)
 2. (PARTLY) sounds get sometimes distorted, might be connected to problem #1
 3. (PARTLY) Separate OpenAL interface from ACM loader and MVE player
+4. implement sound handles so looping, moving sound, stopping sound is possible
 
 Building:
 1. fix include paths during compilation, so the files do not 
