--- a/TODO
+++ b/TODO
@@ -42,8 +42,8 @@ Actor:
    How to: replace GemRB.SetVar with GemRB.SetPlayerStat. Don't forget to create
    the character first. - see bg1 chargen for a complete solution
 2. Move position of actor (and ground circle) to the center of a searchmap cell
-3. Actually handle the iwd2 spelllists. Convert the actor data on the fly in the importer!
-   See the list* 2da files. Handle the level info in them correctly. <-- big task
+3. (PARTLY) Actually handle the iwd2 spelllists. Exporter is still needed.
+4. Sorceror style spellcasting (should be spelltype related)
 
 Game GUI:
 1. (PARTLY) implement class based (but customisable) action button bar. Generally port
